自定义函数和匿名函数

--- a/1.python基础知识/6.异常处理.ipynb
+++ b/1.python基础知识/6.异常处理.ipynb
@@ -143,6 +143,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "``` python\n",
+    "import sys\n",
+    "try:\n",
+    "    f = open('file.txt', 'r')\n",
+    "    # some data processing\n",
+    "except OSError as err:\n",
+    "    print('OS error: {}'.format(err))\n",
+    "except:\n",
+    "    print('Unexpected error:', sys.exc_info()[0])\n",
+    "finally:\n",
+    "    f.close()```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 用户自定义异常"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error: 1 is invalid input\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyInputError(Exception):\n",
+    "    \"\"\"Exception raised when there're errors in input\"\"\"\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "    def __str__(self):\n",
+    "        return (\"{} is invalid input\".format(repr(self.value)))\n",
+    "\n",
+    "try:\n",
+    "    raise MyInputError(1) # 抛出自定义异常\n",
+    "except MyInputError as err:\n",
+    "    print('error: {}'.format(err))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
