--- a/1.python基础知识/1.基本数据结构_列表与元组.ipynb
+++ b/1.python基础知识/1.基本数据结构_列表与元组.ipynb
@@ -690,6 +690,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3, 4]\n",
+    "l[::-1]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -715,6 +736,61 @@
    "source": [
     "l = [1,2,3,4]\n",
     "4 in l"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.14 遍历"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index 0,num 4\n",
+      "index 1,num 5\n",
+      "index 2,num 6\n",
+      "index 3,num 1\n",
+      "index 4,num 4\n",
+      "index 5,num 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [4,5,6,1,4,7]\n",
+    "for idx, num in enumerate(l):\n",
+    "    print(\"index {},num {}\".format(idx, num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num 4\n",
+      "num 5\n",
+      "num 6\n",
+      "num 1\n",
+      "num 4\n",
+      "num 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [4,5,6,1,4,7]\n",
+    "for num in l:\n",
+    "    print(\"num {}\".format(num))"
    ]
   },
   {
