--- a/1.python基础知识/7.自定义函数.ipynb
+++ b/1.python基础知识/7.自定义函数.ipynb
@@ -255,7 +255,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python的解释器会默认函数内部的变量为局部变量,但是发现MIN_VALUE并没有声明,就报错.如果必须改变全部变量的值,需要加上global这个声明"
+    "Python的解释器会默认函数内部的变量为局部变量,但是发现MIN_VALUE并没有声明,就报错.如果必须改变全部变量的值,需要加上global这个声明,当然这个针对的是不可变对象<br/>\n",
+    "**当全局变量指向的对象不可变时,比如是整型,字符串等等,如果你尝试在函数内部改变它的值,却不加关键字global,就会抛异常**\n",
+    "**如果全局变量指向的对象是可变的,比如是列表,字典等等,就可以在函数内部修改它**"
    ]
   },
   {
@@ -277,6 +279,30 @@
     "    MIN_VALUE=-10\n",
     "change_global_var2()\n",
     "print(MIN_VALUE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = [1,2,3]\n",
+    "def change_global_list():\n",
+    "    l.append(4)\n",
+    "change_global_list()\n",
+    "l"
    ]
   },
   {
