python协程,建议这部分在google colab平台做

--- a/2.python进阶/4.迭代器和生成器.ipynb
+++ b/2.python进阶/4.迭代器和生成器.ipynb
@@ -192,7 +192,9 @@
    ],
    "source": [
     "test_iterator()\n",
-    "test_generator()"
+    "test_generator()\n",
+    "# 这个可以在Google 的colab中运行,这个是不会有异常的\n",
+    "#本笔记已经上传至https://colab.research.google.com/drive/1rA8AuArZW31Ch12tFueLOEnYBcc7HMeX#scrollTo=S_lja12leume"
    ]
   },
   {
