--- a/2.python进阶/6.python并发之Futures.ipynb
+++ b/2.python进阶/6.python并发之Futures.ipynb
@@ -35,6 +35,260 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 并发编程之Futures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 单线程和多线程性能比较"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "假设有个任务是下载一些网站的内容并打印,如果单线程处理,代码实现如下:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read 172314 from https://baike.baidu.com/item/%E5%8E%86%E5%8F%B2/360?fr=aladdin\n",
+      "Read 221257 from https://baike.baidu.com/item/%E8%89%BA%E6%9C%AF/12004323?fr=aladdin\n",
+      "Read 262924 from https://baike.baidu.com/item/%E6%95%B0%E5%AD%A6/107037?fr=aladdin\n",
+      "Read 246529 from https://baike.baidu.com/item/%E7%94%9F%E7%89%A9/161443?fr=aladdin\n",
+      "Read 210044 from https://baike.baidu.com/item/java/85979\n",
+      "Read 210268 from https://baike.baidu.com/item/Python/407313\n",
+      "Download 6 sites in 1.7111022999999932 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import time\n",
+    "\n",
+    "headers={\n",
+    "    \"user-agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.129 Safari/537.36\"\n",
+    "}\n",
+    "\n",
+    "def download_one(url):\n",
+    "    resp = requests.get(url,headers=headers)\n",
+    "    print(\"Read {} from {}\".format(len(resp.content),url))\n",
+    "\n",
+    "    \n",
+    "def download_all(sites):\n",
+    "    for site in sites:\n",
+    "        download_one(site)\n",
+    " \n",
+    "    \n",
+    "def main():\n",
+    "    sites=[\n",
+    "        \"https://baike.baidu.com/item/%E5%8E%86%E5%8F%B2/360?fr=aladdin\",\n",
+    "        \"https://baike.baidu.com/item/%E8%89%BA%E6%9C%AF/12004323?fr=aladdin\",\n",
+    "        \"https://baike.baidu.com/item/%E6%95%B0%E5%AD%A6/107037?fr=aladdin\",\n",
+    "        \"https://baike.baidu.com/item/%E7%94%9F%E7%89%A9/161443?fr=aladdin\",\n",
+    "        \"https://baike.baidu.com/item/java/85979\",\n",
+    "        \"https://baike.baidu.com/item/Python/407313\"\n",
+    "    ]\n",
+    "    start_time = time.perf_counter()\n",
+    "    download_all(sites)\n",
+    "    end_time = time.perf_counter()\n",
+    "    print('Download {} sites in {} seconds'.format(len(sites), end_time - start_time))\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 多线程版本"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read 172314 from https://baike.baidu.com/item/%E5%8E%86%E5%8F%B2/360?fr=aladdin\n",
+      "Read 262924 from https://baike.baidu.com/item/%E6%95%B0%E5%AD%A6/107037?fr=aladdin\n",
+      "Read 210044 from https://baike.baidu.com/item/java/85979\n",
+      "Read 221257 from https://baike.baidu.com/item/%E8%89%BA%E6%9C%AF/12004323?fr=aladdin\n",
+      "Read 246529 from https://baike.baidu.com/item/%E7%94%9F%E7%89%A9/161443?fr=aladdin\n",
+      "Read 210268 from https://baike.baidu.com/item/Python/407313\n",
+      "Download 6 sites in 0.43872379999993427 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import concurrent.futures\n",
+    "import requests\n",
+    "import threading\n",
+    "import time\n",
+    "\n",
+    "\n",
+    "headers={\n",
+    "    \"user-agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.129 Safari/537.36\"\n",
+    "}\n",
+    "\n",
+    "def download_one(url):\n",
+    "    resp = requests.get(url,headers=headers)\n",
+    "    print('Read {} from {}'.format(len(resp.content), url))\n",
+    " \n",
+    " \n",
+    "def download_all(sites):\n",
+    "    with concurrent.futures.ThreadPoolExecutor(max_workers=5) as executor:\n",
+    "        executor.map(download_one, sites)\n",
+    "        \n",
+    "        \n",
+    "def main():\n",
+    "    sites=[\n",
+    "        \"https://baike.baidu.com/item/%E5%8E%86%E5%8F%B2/360?fr=aladdin\",\n",
+    "        \"https://baike.baidu.com/item/%E8%89%BA%E6%9C%AF/12004323?fr=aladdin\",\n",
+    "        \"https://baike.baidu.com/item/%E6%95%B0%E5%AD%A6/107037?fr=aladdin\",\n",
+    "        \"https://baike.baidu.com/item/%E7%94%9F%E7%89%A9/161443?fr=aladdin\",\n",
+    "        \"https://baike.baidu.com/item/java/85979\",\n",
+    "        \"https://baike.baidu.com/item/Python/407313\"\n",
+    "    ]\n",
+    "    start_time = time.perf_counter()\n",
+    "    download_all(sites)\n",
+    "    end_time = time.perf_counter()\n",
+    "    print('Download {} sites in {} seconds'.format(len(sites), end_time - start_time))\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "主要区别在于我们创建了一个线程池,总共有5个线程可以分配使用.**executer.map()** 与前面所讲的Python内置的map()函数类似,表示对sites中的每个元素,并发的调用download_one() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "download_one()函数中,requests.get()方法是线程安全的\n",
+    "并行的方式去提高程序运行效率,需要在download_all()函数中,做出下面的变化:<br/>\n",
+    "with futures.ThreadPoolExecutor(workers) as executor<br/>\n",
+    "=><br/>\n",
+    "with futures.ProcessPoolExecutor() as executor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 什么是Futures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python中的Futrues模块,位于concurrent.futures和asyncio中,他们都表示带有延迟的操作.Futures会将处于等待状态的操作包裹起来放到队列中,这些操作的状态随时可以查询,当然,他们的结果或是异常,亦能够在操作完成后被获取"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Futures中的方法done(),表示相对应的操作是否完成-True表示完成,False表示没有完成.不过,需要注意,done()是non-blocking的,会立即返回结果.相对应的add_done_callback(fn),则表示Futures完成后, 相对应的参数函数fn,会被通知并执行调用"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Futures中还有一个重要的函数result(),它表示当future完成后,返回其对应的结果或者异常.而as_completed(fn),则是针对给定的future迭代器fs,在其完成后,返回完成后的迭代器"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read 172314 from https://baike.baidu.com/item/%E5%8E%86%E5%8F%B2/360?fr=aladdin\n",
+      "Read 246529 from https://baike.baidu.com/item/%E7%94%9F%E7%89%A9/161443?fr=aladdin\n",
+      "Read 221257 from https://baike.baidu.com/item/%E8%89%BA%E6%9C%AF/12004323?fr=aladdin\n",
+      "Read 210044 from https://baike.baidu.com/item/java/85979\n",
+      "Read 262924 from https://baike.baidu.com/item/%E6%95%B0%E5%AD%A6/107037?fr=aladdin\n",
+      "Read 210268 from https://baike.baidu.com/item/Python/407313\n",
+      "Download 6 sites in 0.4626204000001053 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import concurrent.futures\n",
+    "import requests\n",
+    "import time\n",
+    "\n",
+    "headers={\n",
+    "    \"user-agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.129 Safari/537.36\"\n",
+    "}\n",
+    " \n",
+    "def download_one(url):\n",
+    "    resp = requests.get(url,headers=headers)\n",
+    "    print('Read {} from {}'.format(len(resp.content), url))\n",
+    " \n",
+    "def download_all(sites):\n",
+    "    with concurrent.futures.ThreadPoolExecutor(max_workers=5) as executor:\n",
+    "        to_do = []\n",
+    "        for site in sites:\n",
+    "            future = executor.submit(download_one, site)\n",
+    "            to_do.append(future)\n",
+    "            \n",
+    "        for future in concurrent.futures.as_completed(to_do):\n",
+    "            future.result()\n",
+    "def main():\n",
+    "    sites=[\n",
+    "        \"https://baike.baidu.com/item/%E5%8E%86%E5%8F%B2/360?fr=aladdin\",\n",
+    "        \"https://baike.baidu.com/item/%E8%89%BA%E6%9C%AF/12004323?fr=aladdin\",\n",
+    "        \"https://baike.baidu.com/item/%E6%95%B0%E5%AD%A6/107037?fr=aladdin\",\n",
+    "        \"https://baike.baidu.com/item/%E7%94%9F%E7%89%A9/161443?fr=aladdin\",\n",
+    "        \"https://baike.baidu.com/item/java/85979\",\n",
+    "        \"https://baike.baidu.com/item/Python/407313\"\n",
+    "    ]\n",
+    "    start_time = time.perf_counter()\n",
+    "    download_all(sites)\n",
+    "    end_time = time.perf_counter()\n",
+    "    print('Download {} sites in {} seconds'.format(len(sites), end_time - start_time))\n",
+    " \n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "python主程序之允许有一个线程执行,所以python的并发,是通过多线程的切换完成的\n",
+    "Python的解释器并不是线程安全的,为了解决由此带来的条件竞争,python引入了全局解释器锁,也就是同一时刻,只允许一个线程执行,当然,在执行I/O操作时,如果一个线程被block了,全局解释器锁便会被释放,从而让另一个线程能够继续执行"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
