进阶篇结束

--- a/1.python基础知识/9.面对对象_上.ipynb
+++ b/1.python基础知识/9.面对对象_上.ipynb
@@ -68,11 +68,7 @@
    "source": [
     "harry_potter_book.intercept_context(10)\n",
     "print(harry_potter_book.get_context_length())\n",
-<<<<<<< HEAD
     "print(harry_potter_book.__context) # 双下划线开头的是私有变量,不可以直接访问,所以会有异常"
-=======
-    "print(harry_potter_book.__context)"
->>>>>>> 43f72ea690fa76e895b87429f04ef45a4539df75
    ]
   },
   {
@@ -103,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,10 +112,7 @@
     "        self.__context = context\n",
     "    \n",
     "    #类函数\n",
-<<<<<<< HEAD
     "    #类函数的第一个参数一般是cls,表示必须传一个类进来\n",
-=======
->>>>>>> 43f72ea690fa76e895b87429f04ef45a4539df75
     "    @classmethod\n",
     "    def create_empty_book(cls, title, author):\n",
     "        return cls(title=title, author=author, context='nothing')\n",
@@ -136,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -148,12 +141,13 @@
     }
    ],
    "source": [
+    "#调用类函数\n",
     "empty_book = Document.create_empty_book('what every man thinks about apart from sex','Professor Sheridan Simove')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -161,13 +155,16 @@
      "output_type": "stream",
      "text": [
       "7\n",
-      "welcome! the context for this book is indeed nothing.\n"
+      "welcome! the context for this book is indeed nothing.\n",
+      "welcome! the context for this book is static method invoke.\n"
      ]
     }
    ],
    "source": [
     "print(empty_book.get_context_length())\n",
-    "print(empty_book.get_welcome('indeed nothing'))"
+    "#静态方法调用\n",
+    "print(empty_book.get_welcome('indeed nothing'))\n",
+    "print(Document.get_welcome(\"static method invoke\"))"
    ]
   },
   {
@@ -262,10 +259,7 @@
     "class Video(Entity):\n",
     "    def __init__(self, title, author, video_length):\n",
     "        print('video class init called')\n",
-<<<<<<< HEAD
     "        #必须主动调用父类的构造\n",
-=======
->>>>>>> 43f72ea690fa76e895b87429f04ef45a4539df75
     "        Entity.__init__(self,'video')\n",
     "        self.title=title\n",
     "        self.author=author\n",
@@ -443,16 +437,6 @@
    "source": [
     "d = D()"
    ]
-<<<<<<< HEAD
-=======
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
->>>>>>> 43f72ea690fa76e895b87429f04ef45a4539df75
   }
  ],
  "metadata": {
