--- a/2.python进阶/1.python对象的比较,拷贝.ipynb
+++ b/2.python进阶/1.python对象的比较,拷贝.ipynb
@@ -146,16 +146,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,6 +170,7 @@
    "source": [
     "a = 257\n",
     "b = 257\n",
+    "print(type(a))\n",
     "a == b"
    ]
   },
@@ -301,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +318,7 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -332,32 +340,46 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# == 比较的是值\n",
     "l1 == l2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "2394263246536\n",
+      "2394263664328\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "False"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#is比较的是id\n",
+    "print(type(l1))\n",
+    "print(id(l1))\n",
+    "print(id(l2))\n",
     "l1 is l2"
    ]
   },
