--- a/2.python进阶/4.迭代器和生成器.ipynb
+++ b/2.python进阶/4.迭代器和生成器.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -117,11 +117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#需要系统权限,这个在pycharm下实验吧\n",
+    "#或者在colab下运行\n",
     "import os\n",
     "import psutil\n",
     "\n",
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,6 +232,7 @@
     "def generator(k):\n",
     "    i = 1\n",
     "    while True:\n",
+    "        #运行到这里会暂停,然后跳出到next()函数\n",
     "        yield i ** k\n",
     "        i += 1\n",
     "gen_1 = generator(1)\n",
@@ -242,7 +244,8 @@
     "def get_sum(n):\n",
     "    sum_1, sum_3 = 0, 0\n",
     "    for i in range(n):\n",
-    "        next_1 =next(gen_1)\n",
+    "        #调用next()暂停程序复活\n",
+    "        next_1 = next(gen_1)\n",
     "        next_3 = next(gen_3)\n",
     "        print(\"next_1 = {} next_3 ={}\".format(next_1,next_3))\n",
     "        sum_1 += next_1\n",
