--- a/2.python进阶/5.python协程.ipynb
+++ b/2.python进阶/5.python协程.ipynb
@@ -356,6 +356,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "tasks = [1,2,3]\n",
+    "def main(arg1, arg2, arg3):\n",
+    "    print(arg1)\n",
+    "    print(arg2)\n",
+    "    print(arg3)\n",
+    "\n",
+    "print(* tasks)    \n",
+    "main(* tasks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name age\n",
+      "txx\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "dic = {\"name\":\"txx\",\"age\":\"18\"}\n",
+    "def main(name, age):\n",
+    "    print(name)\n",
+    "    print(age)\n",
+    "print(* dic)\n",
+    "main(** dic)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -402,7 +453,8 @@
     "    await worker_2()\n",
     "    print('awaited worker_2')\n",
     "    \n",
-    " \n",
+    "\n",
+    "#这些都是同步调用\n",
     "await main()"
    ]
   },
