--- a/2.python进阶/6.python并发之Futures.ipynb
+++ b/2.python进阶/6.python并发之Futures.ipynb
@@ -257,10 +257,12 @@
     "    with concurrent.futures.ThreadPoolExecutor(max_workers=5) as executor:\n",
     "        to_do = []\n",
     "        for site in sites:\n",
+    "            #提交任务,返回future\n",
     "            future = executor.submit(download_one, site)\n",
     "            to_do.append(future)\n",
     "            \n",
     "        for future in concurrent.futures.as_completed(to_do):\n",
+    "            #获取future结果\n",
     "            future.result()\n",
     "def main():\n",
     "    sites=[\n",
